imlementacion de Swagger y pruebas unitarias
